working ambari dockerfile
working ambari dockerfile